--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -21,7 +21,7 @@
     
 - layout: left
   company: Hitachi India
-  link: https://hitachi.com/
+  link: https://www.hitachi.com/
   job_title: Data Analyst Intern
   dates: Mar 2019 - Apr 2019
   quote: >
